Express In Progress - Mongoose Insallation - Model-View-Controller directory structure for organised code structure - Creating Schema using Mongoose in Model Directory - Connecting API with MongoDB Atlas - CRUD Operation using API in online mongodb.

--- a/Express-js/model-view-controller/view/index.html
+++ b/Express-js/model-view-controller/view/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Express-js Tutorial</title>
+    <link rel="icon" href="favicon.ico" type="image/x-icon">
     <link
     rel="stylesheet"
     href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css"
@@ -240,8 +241,8 @@
                   <h5 class="dress-name">**title**</h5>
       
                   <div class="d-flex flex-column mb-2">
-                    <span class="new-price">&#8377 **price**</span>
-                    <small class="old-price text-right">&#8377 **originalPrice** </small>
+                    <span class="new-price">&#8377 **discountPrice**</span>
+                    <small class="old-price text-right">&#8377 **price** </small>
                   </div>
                 </div>
       
